--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -52,7 +52,9 @@ hard real-time systems primarily in the context of the Copilot RV
 framework.  In order to be used in ultra-critical environments,
 high-assurance RV must:
 \begin{enumerate}
-\item \label{req:a} Provide evidence for a safety case that the RV enforces safety guarantees.
+\item \label{req:a} Provide evidence for a safety case that the RV
+  enforces safety guarantees.
+\item \label{req:d}  Be reliable in the presence of faults.  
 \item \label{req:b} Support verification that the specification of the monitors
   is correct.
 \item \label{req:c} Ensure that monitor code generated implements the specification of the
