--- a/ISoLA16/trace.tex
+++ b/ISoLA16/trace.tex
@@ -2,10 +2,9 @@
 
 \noindent\fbox{%
     \parbox{\textwidth}{%
-Challenge : Is there traceability from the reqirememts and system level analysis to the actual monitor code?
+Challenge :
     }%
 }
-
 
 If an IA system is the gain certification under existing guidance
 through use of assured RV, the RV framework should generate the
@@ -23,8 +22,11 @@ establishing traceability from source code to object code.  To
 facilitate the acceptance of RV in these areas, RV frameworks should
 facilitate traceability from the monitor to the specification.  
 
+ \paragraph{Challenge} 
+Can we demonstrate traceability from the reqirememts and system level analysis
+ to the actual monitor code?
 
-Copilot's monitor generation process can create many small C
+\paragraph{Example} Copilot's monitor generation process can create many small C
 files. The code generation module has recently been revised to
 generate code that is more readable and traceable.  We require the
 user to insert labels in their specifications. The translation process
