more filling in draft

--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -1926,6 +1926,19 @@ year = "1985"
 
 
 
+
+@Booklet{ARINC653,
+  title = 	 {Avionics Application Software Standard Interface: Part I - Required Services (ARINC Specification 653-2)},
+  OPTkey = 	 {},
+ author = 	 {Aeronautical Radio, Incorporated (ARINC)}
+  OPThowpublished = {},
+  OPTaddress = 	 {},
+  OPTmonth = 	 {},
+  OPTyear = 	 {2015},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
 % --------- EDSL -----------
 
 @article{Gill:14:DSLs,
@@ -2010,8 +2023,6 @@ month={March}
         address = "Georgia, Atlanta, USA",
         month = "June",
         year = "2014"
-
-
 }
 
 @techreport{NM2011NASA,
