--- a/ISoLA16/trace.tex
+++ b/ISoLA16/trace.tex
@@ -1,30 +1,17 @@
 \section{Traceability}~\label{sec:trace}
 
-\noindent\fbox{%
-    \parbox{\textwidth}{%
-Challenge :
-    }%
-}
-
-If an IA system is the gain certification under existing guidance
-through use of assured RV, the RV framework should generate the
-supporting documentation.  An identifying characteristic of any of any
-RV framework is the generation of monitors from
-specifications. Typically, the RV transforms a safety property
-expressed in logical notation such as LTL into a state machine encoded
-in a traditional programming language. For instance, MoP translates
-specifications into Java monitors while Copilot translates them into C
-monitors. Approval of aviation software under the guidance of DO-178C
-requires a traceability from requirements to object code. Guidance for
-producing certified software in other safety-critical domains also
-insist on traceability.  Industry has well established means for
-establishing traceability from source code to object code.  To
-facilitate the acceptance of RV in these areas, RV frameworks should
-facilitate traceability from the monitor to the specification.  
+Safety is a systems property and most of the analysis ensuring a
+design is safe is conducted during requirements and design.  To ensure
+the safety analysis is carried through the design and development
+process many guidelines for safety-critical software, such as DO-178C,
+requires documentation of traceability from requirements to object
+code. While industry has well established means for establishing
+traceability from source code to object code.  To facilitate the
+acceptance of RV in these areas, RV frameworks should facilitate
+traceability from the monitor to the specification.
 
  \paragraph{Challenge} 
-Can we demonstrate traceability from the reqirememts and system level analysis
- to the actual monitor code?
+To  traceability from the reqirememts and system level analysis to the actual monitor code. 
 
 \paragraph{Example} Copilot's monitor generation process can create many small C
 files. The code generation module has recently been revised to
@@ -33,10 +20,10 @@ user to insert labels in their specifications. The translation process
 creates C header files with documentation formatted to be processed by
 the plan text graph description language processor  DOT~\cite{ZZZZ}
 giving  visual representation of the code  that includes the labels
-making it easy to determine the correspondence between the monitor and
+making it easy to determine the correspondence between the monitor and 
 specification. 
 
-
+ 
 %\begin{itemize}
 %\item Many conventional processes based  guidance
 % documents require ``traceability'' from the requirements to the
