small changes to the paper

--- a/ISoLA16/trace.tex
+++ b/ISoLA16/trace.tex
@@ -23,7 +23,10 @@ giving  visual representation of the code  that includes the labels
 making it easy to determine the correspondence between the monitor and 
 specification. 
 
- 
+
+In the case of the aircraft horizontal 
+
+
 %\begin{itemize}
 %\item Many conventional processes based  guidance
 % documents require ``traceability'' from the requirements to the
