draft of most core sections. Much much more to do

--- a/ISoLA16/FT.tex
+++ b/ISoLA16/FT.tex
@@ -27,7 +27,7 @@ entire system fails.
  be robust in the presence of hardware faults such as sensor failures
  and voltage spikes as well.  A \emph{fault-containment region} (FCR)
  is a region in a system designed to ensure faults do not propagate to
- other regions~\cite{Rushby01:buscompare}.   The
+ other regions~\cite{Rushby01:buscompare}.   TheL
  easiest way to ensure this is to physically isolate one FCR from
  another.  However, FCRs may need to communicate, hence they share
  channels. An FCR containing a monitor may need to share a channel
@@ -35,7 +35,7 @@ entire system fails.
  over these channels.
 
 
- \paragraph{Example} Fault-tolerant RV has been a ongoing topic of
+ \paragraph{Copilot Approach} Fault-tolerant RV has been a ongoing topic of
  investigation for the Copilot research group. The avionics industry
  has been migrating away from federated systems toward the use of
  integrated modular avionics that provide fault-tolerance as a
