--- a/ISoLA16/paper.tex
+++ b/ISoLA16/paper.tex
@@ -4,6 +4,7 @@
 \usepackage[hyphens]{url}
 %\usepackage{fullpage}
 \usepackage{cite,xcolor}
+\usepackage{graphicx}
 \usepackage{xcolor} 
 \usepackage{amsfonts} 
 \usepackage{amsmath}
@@ -104,7 +105,7 @@
 
 \begin{document}
 
-\title{Challenges in Assured Runtime Verification} 
+\title{Challenges and Opportunities  in Assured Runtime Verification} 
 \titlerunning{Assuring the Guardians}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
