--- a/ISoLA16/steer.tex
+++ b/ISoLA16/steer.tex
@@ -1,11 +1,13 @@
-\section{Steering} \label{sec:steer}
+\section|Future Work}\label{sec:future} 
+We  so far examined challenges and opportunities in assured  RV that
+have been addressed in our own research. In this section, we will
+raise  three of the key additional  challenges that we believe need to be
+addressed in future work. 
 
-\noindent\fbox{%
-    \parbox{\textwidth}{
-Challenge:   When the monitor detects a problem, does the RV system steer the system so as to preserve safety. 
-    }
-}
 
+\paragraph{Challenge:}  Verifying the correctness and safety of the
+steering performed once a specification violation is detected. 
+  
 The problem of what to do when a specification has been violated is
 one of the most thorny problems in RV and almost completely
 application dependent.  Most case studies the author has seen simply
@@ -15,17 +17,50 @@ autonomous robot there putting the system into a quiescent state may
 be a safe default operation depending on the operating environment.
 The research aircraft conflict detection mentioned above has produced
 an algorithm for generating resolution maneuvers that would
-reestablish safe aircraft separation.  How to build a safety case that
-would allow this to be used for steering UAS remains an open question.
-Our experience in participating in UAS flight tests illustrate how
-difficult the steering problem can be.  Under certain conditions,
-trained human operators sometime bring down a UAS in a controlled
-within the designated zone of operations to prevent an aircraft
-causing harm.  Automating this might seem as simple as killing power
-to the engines; yet aircraft can glide for some distance. The steering
+reestablish safe aircraft separation. Our experience in participating
+in UAS flight tests illustrate how difficult the steering problem can
+be. Automating this might seem as simple as killing power to the
+engines; yet aircraft can glide for some distance. The steering
 software may be able to direct the control surfaces to direct the
 vehicle into the ground, but consideration of aircraft dynamics is
 likely needed to close this can be safely done to the boundary of the
 operating zone.  In many domains, the challenge in constructing an
 assured safe steering algorithm may be as difficult as constructing
 the adaptive autonomous algorithm.
+
+\paragraph{Challenge} 
+
+Complex  real-time cyber-physical systems  are a natural target for
+RV.  Applying RV to  functions such as an  adaptive control system
+that have to act in strict time windows posses  technical
+challenges. The monitor needs to detect  that the adaptive
+controller is about to loose stability in time to  switch to a safe
+controller. In the case of aircraft flight management, the RV system
+needs to detect that  two airplanes are about to lose separation in
+time for the aircraft to take corrective action.   Assured predictive
+monitors are needed, but much work remains to be done. A promising
+approach to monitoring controllers against a loss of stability is
+given in~\cite{}. Researchers using Copilot have shown how  timing
+analysis and  hard real-time scheduling of monitors can ensure that
+monitors are executed at a set time.  Assured predictive monitoring
+remains a research challenge for the RV community.
+
+
+
+\paragraph{Challenge} Assured RV should not introduce security
+vulnerabilities into a system. 
+
+Adding more software or  hardware to a system  has the potential to  
+introduce vulnerabilities that that can be exploited by  an
+attacker.  Copilot and many other RV frameworks generate monitors that
+have constant time and constant space execution footprints and
+while this eliminates some common attacks it does not provide general
+protection. If an attacker can trick the systems into a monitor
+specification violation, the triggered steering behavior may itself
+constitute an attack.  Future research is needed in  Identifying attack surfaces
+and suitable techniques to thwart adversaries from turning the RV
+meant to protect a system into a liability that exposes the system to
+attack.
+
+
+
