--- a/ISoLA16/steer.tex
+++ b/ISoLA16/steer.tex
@@ -1,4 +1,4 @@
-\section|Future Work}\label{sec:future} 
+\section{Future Work}\label{sec:future} 
 We  so far examined challenges and opportunities in assured  RV that
 have been addressed in our own research. In this section, we will
 raise  three of the key additional  challenges that we believe need to be
