starting to smooth out the draft a bit

--- a/ISoLA16/FT.tex
+++ b/ISoLA16/FT.tex
@@ -27,12 +27,12 @@ entire system fails.
  be robust in the presence of hardware faults such as sensor failures
  and voltage spikes as well.  A \emph{fault-containment region} (FCR)
  is a region in a system designed to ensure faults do not propagate to
- other regions~\cite{Rushby01:buscompare}.   TheL
+ other regions~\cite{Rushby01:buscompare}.   The 
  easiest way to ensure this is to physically isolate one FCR from
  another.  However, FCRs may need to communicate, hence they share
  channels. An FCR containing a monitor may need to share a channel
  with the SUO.  Care must be taken to ensure faults cannot propagate
- over these channels.
+ over these channels. 
 
 
  \paragraph{Copilot Approach} Fault-tolerant RV has been a ongoing topic of
