--- a/ISoLA16/paper.tex
+++ b/ISoLA16/paper.tex
@@ -20,6 +20,10 @@
 \usepackage{color}
 \usepackage{pgf}
 \usepackage{tikz}
+\usepackage{pgf}
+\usetikzlibrary{arrows,automata}
+\usepackage{tikz-cd}
+\usetikzlibrary{positioning}
 \usepackage{bm}
 \usetikzlibrary{arrows,automata}
 
@@ -110,7 +114,7 @@
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{Alwyn Goodloe\inst{2}
+\author{Alwyn Goodloe
  }
 %
 \authorrunning{Alwyn E. Goodloe} % abbreviated author list (for running head)
@@ -140,7 +144,7 @@ TBD
 \input{verispec}
 \input{codecorrect}
 \input{steer}
-%\input{predictive}
+\input{predictive}
 %\input{security}
 \input{Related}
 \input{conclusion} 
