--- a/ISoLA16/copilot.tex
+++ b/ISoLA16/copilot.tex
@@ -1,4 +1,72 @@
 \section{Copilot}~\label{sec:copilot} 
+
+
+\begin{figure}[ht!]
+        \centering
+
+        \resizebox {0.8\textwidth} {!} {
+
+\begin{tikzpicture}[->, node distance=3cm, auto, shorten >=1pt, bend angle=45,
+thick ]
+\tikzstyle{every state}=[rectangle, rounded corners]
+
+
+\node[state] (Int) {Interpreter};
+\node[state] (Lang) [above right of=Int] {%
+                \begin{tabular}[b]{l}
+                Copilot Libraries\\ \hline Copilot Language
+                \end{tabular}};
+        \node[state] (Core) [below right of=Lang] {Copilot Core};
+        \node[state] (PP) [right of=Core] {Pretty Printer};
+
+        \node[state] (ACSL) [below of=PP] {\begin{tabular}[b]{l}
+                ACSL\\ generator
+                \end{tabular}};
+        \node[state] (DOTc) [right of=ACSL] {\begin{tabular}[b]{l}
+                DOT\\ generator
+                \end{tabular}};
+        \node[state] (SBV) [below of=Core] {SBV Back-End};
+
+        \node[state] (SMT) [below left=1.6cm and 1.2cm of Int] {SMT Lib};
+        \node[state] (C99S) [below of=SBV] {\begin{tabular}[b]{l}
+                DOT\\ \hline ACSL\\ \hline C99
+                \end{tabular}};
+        \node[state] (DOT) [below right of=C99S] {DOT/graphviz};
+        \node[state] (CCOMP) [below left=0.3cm and 0.3cm of C99S] {CompCert};
+        \node[state] (ASM) [below=1cm of CCOMP] {Assembly code};
+
+
+        \tikzstyle{every node}=[]
+
+
+        \path %% (Libs) edge node {0,1,L} (Lang);
+        %% edge node {1,1,R} (C)
+        (Lang) edge [bend left, anchor=west, text width=2.5cm] node {Reification and DSL-specific type-checking} (Core)
+        %% edge node {0,1,L} (C)
+        (Core) edge [anchor=east] node {Translation} (SBV)
+        edge node {} (PP)
+        edge node [swap] {Evaluation} (Int)
+        (ACSL) edge [bend left, anchor=west] node {Integration} (C99S)
+        (DOTc) edge [bend left, anchor=east] node {} (C99S)
+        (Int) edge [<->, bend right, anchor=east] node {QuickCheck} (SBV)
+        (PP) edge [->, anchor=east, text width=2cm] node {ACSL generation} (ACSL)
+        (PP) edge [->, anchor=west] node {DOT generation} (DOTc)
+        (C99S) edge [->, anchor=north west] node {make} (CCOMP)
+        (Core) edge [->, anchor=south east, text width=3cm] node {proof generation} (SMT)
+        (CCOMP) edge [->, anchor=east] node {Cross-compilation} (ASM)
+        (C99S) edge [loop left, ->, anchor=east] node {Verification with frama-c WP plugin} (C99S)
+        (C99S) edge [->, anchor=west] node {Extraction and graph generation} (DOT)
+        (SBV) edge [->,anchor=east] node {Compilation} (C99S);
+        %% edge [bend left] node {Translation} (SBV)
+        %% (Atom) edge [loop below] node {1,1,R} (D)
+        %% edge node {0,1,R} (Libs)
+        %% (SBV) edge [bend left] node {1,0,R} ();
+        \end{tikzpicture}
+}
+        \caption{The Copilot toolchain.}
+        \label{fig:new-toolchain}
+        \end{figure}
+
 Copilot is a domain specific language (DSL)  embedded in the functional
 programming language Haskell~\cite{Haskell98}   tailored to
 programming monitors for hard real-time, reactive systems. Given that
@@ -10,12 +78,9 @@ while keeping the core DSL small.
 
 Copilot is a \emph{stream} based language where a stream is an infinite ordered
 sequence of values that must conform to the same type.  All transformations of
-data in Copilot must be propagated through streams.  In this respect, Copilot is
-similar to Lustre~\cite{CaspiPHP87}, but is specialized for RV. Copilot
+data in Copilot must be propagated through streams. Copilot
 guarantees that specifications compile to constant-time and constant-space
-implementations to update stream states. 
-
-Copilot streams mimic both the syntax and semantics of
+implementations to update stream states. Copilot streams mimic both the syntax and semantics of
 Haskell lazy lists with the exception that  operators are
 automatically promoted point-wise to the list level.
 
@@ -32,24 +97,18 @@ stream {\tt s}, returning the remainder of the stream.
 
 
 
-Copilot's toolchain is depicted in Figure~\ref{fig:toolchain}, which we
-highlight here; assurance-relevant aspects of the toolchain are covered in more
-detail later.  Copilot is deeply embedded in Haskell.  A Copilot program is
+Copilot's toolchain is depicted in Figure~\ref{fig:toolchain}..  Copilot is deeply embedded in Haskell.  A Copilot program is
 reified (i.e., transformed from a recursive structure into explicit graphs via
 observable sharing~\cite{gill}) and then some domain-specific type-checking is
 done.  At this point, we have transformed the program into the ``core''
 language, an intermediate representation.  The core package contains
 an  interpreter  that can be viewed as an operational semantics for
-the language. 
-
-
-
-The back-ends translate a Copilot core program into the language of another
+the language.   The back-ends translate a Copilot core program into the language of another
 Haskell-hosted EDSL for code generation.  We use the
-Symbolic Bit Vectors (SBV),  an EDSL
-developed by Levent Erk\"{o}k. 
+Symbolic Bit Vectors (SBV),  an EDSL developed by Levent Erk\"{o}k. 
 The EDSL also contains a C-code generator, which we use to generate C
-monitors. 
+monitors.  Aspects of the toolchain relevant to high assurance are covered in more
+detail later
 
 We use the recent Safe Haskell compiler extensions to implement
 Copilot~\cite{safe}.  Copilot's language package is explicitly \emph{Trustworthy
@@ -57,6 +116,4 @@ Copilot~\cite{safe}.  Copilot's language package is explicitly \emph{Trustworthy
 observable sharing.  Copilot's core language is written in \emph{Safe Haskell}.
 
 
-\alwyn{Say something about interpreter vs compiler as well as SBV and
-  the big diagram.} 
 
